vanilla and aos js add

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -25,6 +25,8 @@
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="../images/favicon.png">
 
+     <!-- aos css -->
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,19 +37,19 @@
 
     <header>
         <nav>
-            <div class="logo"><a href="./faq.html">WorkHub</a></div>
+            <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down" class="logo"><a href="./faq.html">WorkHub</a></div>
             <input type="checkbox" id="check" />
             <label for="check">
                 <i class="bx bx-menu-alt-right" id="menu"></i>
             </label>
             <ul>
-                <li><a href="../index.html">Bosh Sahifa</a></li>
-                <li><a href="../index.html#sharoitlar">Sharoitlar</a></li>
-                <li><a href="../index.html#fikrlar">Fikrlar</a></li>
-                <li><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
-                <li><a href="../index.html#FAQ">FAQ</a></li>
-                <li><a href="../index.html#tolovlar">To'lovlar</a></li>
-                <li><a href="../login/login.html" class="entrance">Kirish</a></li>
+                <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html">Bosh Sahifa</a></li>
+                <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#sharoitlar">Sharoitlar</a></li>
+                <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#fikrlar">Fikrlar</a></li>
+                <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
+                <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#FAQ">FAQ</a></li>
+                <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#tolovlar">To'lovlar</a></li>
+                <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../login/login.html" class="entrance">Kirish</a></li>
             </ul>
         </nav>
     </header>
@@ -58,27 +60,27 @@
     <!-- accordion -->
     <div class="container">
         <div class="accordion">
-            <h1>Tez-tez so'raladigan savollar</h1>
+            <h1 data-aos="zoom-out-down">Tez-tez so'raladigan savollar</h1>
             <div class="accordion-menu">
                 <ul>
                     <li>
-                        <label for="first">
+                        <label data-aos="zoom-out-down" for="first">
                             Hot desk nima? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="first" checked>
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="first" checked>
                         <div class="content">
-                            <p>Hot desk bu jamoat joylarida keng tarqalgan, shaxsiy bo'lmagan va vaqtinchalik
+                            <p data-aos="zoom-out-down">Hot desk bu jamoat joylarida keng tarqalgan, shaxsiy bo'lmagan va vaqtinchalik
                                 foydalaniladigan ish stoli. Bu, ayniqsa, moslashuvchan ish jadvaliga ega odamlar uchun
                                 qulay yechim.</p>
                         </div>
                     </li>
                     <li>
-                        <label for="second">
+                        <label data-aos="zoom-out-down" for="second">
                             Ish maydoni variantlari qanday? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="second">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="second">
                         <div class="content">
-                            <p><span>Hot desk:</span> Kundalik foydalanish uchun umumiy ish joylari.
+                            <p data-aos="zoom-out-down"><span>Hot desk:</span> Kundalik foydalanish uchun umumiy ish joylari.
                                 <br>
                                 <span>Shaxsiy stol:</span> Doimiy foydalanish uchun maxsus ish joyi.
                                 <br>
@@ -87,12 +89,12 @@
                         </div>
                     </li>
                     <li>
-                        <label for="third">
+                        <label data-aos="zoom-out-down" for="third">
                             Meeting xonalari qanday turlarga bo'linadi? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="third">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="third">
                         <div class="content">
-                            <p><span>Kichik xonalar:</span> Shaxsiy uchrashuvlar uchun, 4 kishigacha.
+                            <p data-aos="zoom-out-down"><span>Kichik xonalar:</span> Shaxsiy uchrashuvlar uchun, 4 kishigacha.
                                 <br>
                                 <span>Konferentsiya zallari:</span> Katta uchrashuvlar yoki videokonferentsiyalar uchun,
                                 20 kishigacha.
@@ -100,22 +102,22 @@
                         </div>
                     </li>
                     <li>
-                        <label for="four">
+                        <label data-aos="zoom-out-down" for="four">
                             Meeting xonalarini qanday bron qilaman? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="four">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="four">
                         <div class="content">
-                            <p>Meeting xonalarini bron qilish bizning saytimiz orqali yoki a'zolikka kirganingizdan
-                                so‘ng maxsus ilovamiz orqali amalga oshiriladi.</p>
+                            <p data-aos="zoom-out-down">Meeting xonalarini bron qilish bizning saytimiz orqali yoki a'zolikka kirganingizdan
+                                so'ng maxsus ilovamiz orqali amalga oshiriladi.</p>
                         </div>
                     </li>
                     <li>
-                        <label for="five">
+                        <label data-aos="zoom-out-down" for="five">
                             Qanday qulayliklarni taklif qilasiz? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="five">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="five">
                         <div class="content">
-                            <p><span>Yuqori tezlikdagi Wi-Fi.</span>
+                            <p data-aos="zoom-out-down"><span>Yuqori tezlikdagi Wi-Fi.</span>
                                 <br>
                                 <span>Bepul qahva, choy va sneklar.</span>
                                 <br>
@@ -126,22 +128,22 @@
                         </div>
                     </li>
                     <li>
-                        <label for="six">
+                        <label data-aos="zoom-out-down" for="six">
                             Chop etish xizmatlaridan qanday foydalanaman? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="six">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="six">
                         <div class="content">
-                            <p>Chop etish va skanerlash xizmatlaridan foydalanish uchun resepsiyadan yoki a'zolarga
+                            <p data-aos="zoom-out-down">Chop etish va skanerlash xizmatlaridan foydalanish uchun resepsiyadan yoki a'zolarga
                                 mo'ljallangan maxsus printer hududidan foydalanishingiz mumkin.</p>
                         </div>
                     </li>
-                    <li>
-                        <label for="seven">
+                    <li> 
+                        <label data-aos="zoom-out-down" for="seven">
                             A'zolikka kirish imtiyozlari qanday? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="seven">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="seven">
                         <div class="content">
-                            <p>
+                            <p data-aos="zoom-out-down">
                                 <span>Haftalik tanishuv va networking tadbirlari.</span>
                                 <br>
                                 <span>Biznesni rivojlantirish bo'yicha seminarlar.</span>
@@ -151,12 +153,12 @@
                         </div>
                     </li>
                     <li>
-                        <label for="eight">
+                        <label data-aos="zoom-out-down" for="eight">
                             A'zolik paketlari qanday? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="eight">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="eight">
                         <div class="content">
-                            <p><span>Kunlik a'zolik:</span> Bir kunlik hot desk va barcha qulayliklardan foydalanish.
+                            <p data-aos="zoom-out-down"><span>Kunlik a'zolik:</span> Bir kunlik hot desk va barcha qulayliklardan foydalanish.
                                 <br>
                                 <span>Moslashuvchan a'zolik:</span> Oyiga 10 kun hot deskdan foydalanish.
                                 <br>
@@ -168,12 +170,12 @@
                         </div>
                     </li>
                     <li>
-                        <label for="nine">
+                        <label data-aos="zoom-out-down" for="nine">
                             Virtual ofis nima va u qanday ishlaydi? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="nine">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="nine">
                         <div class="content">
-                            <p>
+                            <p data-aos="zoom-out-down">
                                 Virtual ofis xizmatlari quyidagilarni o'z ichiga oladi:
                                 <br>
                                 <span>Biznes manzili.</span>
@@ -186,24 +188,24 @@
                         </div>
                     </li>
                     <li>
-                        <label for="ten">
+                        <label data-aos="zoom-out-down" for="ten">
                             Tadbir o'tkazish maydonlarini qanday ijaraga olaman? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="ten">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="ten">
                         <div class="content">
-                            <p>
+                            <p data-aos="zoom-out-down">
                                 Tadbir o'tkazish uchun maydonni saytimiz orqali yoki resepsiyaga murojaat qilib bron
                                 qilishingiz mumkin.
                             </p>
                         </div>
                     </li>
                     <li>
-                        <label for="eleven">
+                        <label data-aos="zoom-out-down" for="eleven">
                             Qanday qilib chegirmalardan foydalanaman? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="eleven">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="eleven">
                         <div class="content">
-                            <p>
+                            <p data-aos="zoom-out-down">
                                 A'zolik bilan siz mahalliy qahvaxonalar, sport zallari va boshqa xizmatlarda maxsus
                                 chegirmalardan foydalana olasiz. Tafsilotlar a'zolar uchun maxsus ilovamizda
                                 keltirilgan.
@@ -211,12 +213,12 @@
                         </div>
                     </li>
                     <li>
-                        <label for="twelve">
+                        <label data-aos="zoom-out-down" for="twelve">
                             Maxsus talablar bo'yicha xizmatlar taqdim etasizmi? <span>&#x3e</span>
                         </label>
-                        <input type="radio" name="accordion" id="twelve">
+                        <input data-aos="zoom-out-down" type="radio" name="accordion" id="twelve">
                         <div class="content">
-                            <p>
+                            <p data-aos="zoom-out-down">
                                 Ha, biz mijozlarimiz uchun maxsus xizmatlarni taqdim eta olamiz. Masalan, uzoq muddatli
                                 shaxsiy ofislar yoki tadbirlar uchun maxsus sozlanadigan joylar. Resepsiyaga murojaat
                                 qiling yoki saytimiz orqali so'rov yuboring.
@@ -231,44 +233,43 @@
 
     <!-- footer -->
 
-    <footer>
+    <footer data-tilt data-tilt-max="5" data-tilt-speed="400" data-tilt-perspective="500">
         <div class="container">
             <div class="footer-column">
                 <div class="footer-col">
-                    <div class="logo"><a href="./faq.html">WorkHub</a></div>
-                    <p>Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion,
+                    <div data-aos="zoom-out-down" class="logo"><a href="./faq.html">WorkHub</a></div>
+                    <p data-aos="zoom-out-down">Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion,
                         quvnoq, toza, osoyishta, tezkor.</p>
                     <form>
-                        <p>Jamoamizga qo'shiling</p>
-                        <input id="email" autocomplete="email" required type="email" placeholder="Emailingizni yozing">
-                        <button id="submitBtn">Qo'shilish</button>
+                        <p data-aos="zoom-out-down">Jamoamizga qo'shiling</p>
+                        <input data-aos="zoom-out-down" id="email" autocomplete="email" required type="email" placeholder="Emailingizni yozing">
+                        <button data-aos="zoom-out-down" id="submitBtn">Qo'shilish</button>
                     </form>
                 </div>
-                <div class="footer-col">
-                    <h2>Sahifalar</h2>
+                <div  class="footer-col">
+                    <h2 data-aos="zoom-out-down">Sahifalar</h2>
                     <ul>
-                        <li><a href="../index.html">Bosh Sahifa</a></li>
-                        <li><a href="../index.html#sharoitlar">Sharoitlar</a></li>
-                        <li><a href="../index.html#fikrlar">Fikrlar</a></li>
-                        <li><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
-                        <li><a href="../index.html#FAQ">FAQ</a></li>
-                        <li><a href="../index.html#tolovlar">To'lovlar</a></li>
+                        <li data-aos="zoom-out-down"><a href="./faq.html">Bosh Sahifa</a></li>
+                        <li data-aos="zoom-out-down"><a href="../index.html#sharoitlar">Sharoitlar</a></li>
+                        <li data-aos="zoom-out-down"><a href="../index.html#fikrlar">Fikrlar</a></li>
+                        <li data-aos="zoom-out-down"><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
+                        <li data-aos="zoom-out-down"><a href="../index.html#FAQ">FAQ</a></li>
+                        <li data-aos="zoom-out-down"><a href="../index.html#tolovlar">To'lovlar</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h2>Tarmoqlar</h2>
+                    <h2 data-aos="zoom-out-down">Tarmoqlar</h2>
                     <ul>
-                        <li><a target="_blank" href="https://www.facebook.com/">Facebook</a></li>
-                        <li><a target="_blank" href="https://www.instagram.com/">Instagram</a></li>
-                        <li><a target="_blank" href="https://www.github.com/">GitHub</a></li>
-                        <li><a target="_blank" href="https://www.linkedin.com/">LinkedIn</a></li>
-                        <li><a target="_blank" href="https://www.youtube.com/">YouTube</a></li>
+                        <li data-aos="zoom-out-down"><a target="_blank" href="https://www.facebook.com/">Facebook</a></li>
+                        <li data-aos="zoom-out-down"><a target="_blank" href="https://www.instagram.com/">Instagram</a></li>
+                        <li data-aos="zoom-out-down"><a target="_blank" href="https://www.github.com/">GitHub</a></li>
+                        <li data-aos="zoom-out-down"><a target="_blank" href="https://www.linkedin.com/">LinkedIn</a></li>
+                        <li data-aos="zoom-out-down"><a target="_blank" href="https://www.youtube.com/">YouTube</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
-
     <!-- loader js-->
     <script>
         var load = document.getElementById("load");
@@ -279,6 +280,18 @@
         });
 
     </script>
+
+     <!-- aos js -->
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+     <script>
+        // Body kengligini cheklash
+        document.body.style.overflowX = "hidden";
+         AOS.init();
+     </script>
+ 
+     <!-- vanilla js -->
+     <script src="../vanilla.js"></script>
 </body>
 
 </html>
