--- a/services/services.html
+++ b/services/services.html
@@ -25,6 +25,8 @@
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="../images/favicon.png">
 
+   <!-- aos css -->
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,115 +35,115 @@
 
   <!-- HEADER -->
 
-  <header>
+  <header>  
     <nav>
-      <div class="logo"><a href="./index.html">WorkHub</a></div>
-      <input type="checkbox" id="check" />
-      <label for="check">
-        <i class="bx bx-menu-alt-right" id="menu"></i>
-      </label>
-      <ul>
-        <li><a href="../index.html">Bosh Sahifa</a></li>
-        <li><a href="../index.html#sharoitlar">Sharoitlar</a></li>
-        <li><a href="../index.html#fikrlar">Fikrlar</a></li>
-        <li><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
-        <li><a href="../index.html#FAQ">FAQ</a></li>
-        <li><a href="../index.html#tolovlar">To'lovlar</a></li>
-        <li><a href="../login/login.html" class="entrance">Kirish</a></li>
-      </ul>
+        <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down" class="logo"><a href="./services.html">WorkHub</a></div>
+        <input type="checkbox" id="check" />
+        <label for="check">
+            <i class="bx bx-menu-alt-right" id="menu"></i>
+        </label>
+        <ul>
+            <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html">Bosh Sahifa</a></li>
+            <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#sharoitlar">Sharoitlar</a></li>
+            <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#fikrlar">Fikrlar</a></li>
+            <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
+            <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#FAQ">FAQ</a></li>
+            <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../index.html#tolovlar">To'lovlar</a></li>
+            <li data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" data-aos="zoom-out-down"><a href="../login/login.html" class="entrance">Kirish</a></li>
+        </ul>
     </nav>
-  </header>
+</header>
 
   <!-- book -->
   <div class="container">
     <div class="book">
-      <h1>3 ta oddiy qadamda tez va oson bron qilish!</h1>
+      <h1 data-aos="zoom-out-down">3 ta oddiy qadamda tez va oson bron qilish!</h1>
 
       <div class="book-column">
-        <div class="book-col">
-          <img src="./images/select.png" alt="">
-          <h3>Xona tanlash</h3>
-          <p>Qulay va zamonaviy, ish samaradorligi uchun barcha sharoitlar yaratilgan ofislarni tanlang</p>
+        <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="book-col">
+          <img data-aos="zoom-out-down" src="./images/select.png" alt="">
+          <h3 data-aos="zoom-out-down">Xona tanlash</h3>
+          <p data-aos="zoom-out-down">Qulay va zamonaviy, ish samaradorligi uchun barcha sharoitlar yaratilgan ofislarni tanlang</p>
         </div>
-        <div class="border-img">
-          <img src="./images/arrow1.png" alt="">
+        <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="border-img">
+          <img data-aos="zoom-out-down" src="./images/arrow1.png" alt="">
         </div>
-        <div class="book-col">
-          <img src="./images/book.png" alt="">
-          <h3>Kuningizni bron qiling</h3>
-          <p>Bugungi ishlaringizni rejalang - joyingizni hoziroq bron qiling</p>
+        <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="book-col">
+          <img data-aos="zoom-out-down" src="./images/book.png" alt="">
+          <h3 data-aos="zoom-out-down">Kuningizni bron qiling</h3>
+          <p data-aos="zoom-out-down">Bugungi ishlaringizni rejalang - joyingizni hoziroq bron qiling</p>
         </div>
-        <div class="border-img">
-          <img src="./images/arrow2.png" alt="">
+        <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="border-img">
+          <img data-aos="zoom-out-down" src="./images/arrow2.png" alt="">
         </div>
-        <div class="book-col">
-          <img src="./images/relax.png" alt="">
-          <h3>Hotirjam bo'ling</h3>
-          <p>Xotirjam bo'ling - bizning ofislarimizda barcha qulayliklar sizni kutmoqda</p>
+        <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="book-col">
+          <img data-aos="zoom-out-down" src="./images/relax.png" alt="">
+          <h3 data-aos="zoom-out-down">Hotirjam bo'ling</h3>
+          <p data-aos="zoom-out-down">Xotirjam bo'ling - bizning ofislarimizda barcha qulayliklar sizni kutmoqda</p>
         </div>
       </div>
-      <a href="#" onclick="alert('Bron qilish xizmati ishlamayapti ❌')">Bron qilish</a>
+      <a data-aos="zoom-out-down" href="#" onclick="alert('Bron qilish xizmati ishlamayapti ❌')">Bron qilish</a>
     </div>
 
     <!-- addition services -->
     <div class="container">
       <div class="addition-services">
-        <h1>Taklif etilgan xizmatlar</h1>
+        <h1 data-aos="zoom-out-down">Taklif etilgan xizmatlar</h1>
         <div class="add-services-column">
-          <div class="add-services-col">
+          <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="add-services-col">
             <div class="add-services-col-top">
-              <img src="./images/room1.jpg" alt="">
+              <img data-aos="zoom-out-down" src="./images/room1.jpg" alt="">
             </div>
             <div class="add-services-col-center">
-              <h6>Ish maydoni</h6>
-              <h3>Ish uchun qulaylik</h3>
+              <h6 data-aos="zoom-out-down">Ish maydoni</h6>
+              <h3 data-aos="zoom-out-down">Ish uchun qulaylik</h3>
               <ul>
-                <li><i class='bx bx-check-circle'></i>Kundalik foydalanish uchun</li>
-                <li><i class='bx bx-check-circle'></i>Maxsus shaxsiy ish stollari</li>
-                <li><i class='bx bx-check-circle'></i>2-10 kishilik jamoalar uchun shaxsiy ofislar</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Kundalik foydalanish uchun</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Maxsus shaxsiy ish stollari</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>2-10 kishilik jamoalar uchun shaxsiy ofislar</li>
               </ul>
             </div>
           </div>
-          <div class="add-services-col">
+          <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="add-services-col">
             <div class="add-services-col-top">
-              <img src="./images/room2.jpg" alt="">
+              <img data-aos="zoom-out-down" src="./images/room2.jpg" alt="">
             </div>
             <div class="add-services-col-center">
-              <h6>Meeting xonalari</h6>
-              <h3>Samarali uchrashuvlar joyi</h3>
+              <h6 data-aos="zoom-out-down">Meeting xonalari</h6>
+              <h3 data-aos="zoom-out-down">Samarali uchrashuvlar joyi</h3>
               <ul>
-                <li><i class='bx bx-check-circle'></i>Shaxsiy meeting lar uchun kichik xonalar</li>
-                <li><i class='bx bx-check-circle'></i>Videokonferensiya vositalariga ega katta konferentsiya zallari
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Shaxsiy meeting lar uchun kichik xonalar</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Videokonferensiya vositalariga ega katta konferentsiya zallari
                 </li>
               </ul>
             </div>
           </div>
-          <div class="add-services-col">
+          <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="add-services-col">
             <div class="add-services-col-top">
-              <img src="./images/room3.jpg" alt="">
+              <img data-aos="zoom-out-down" src="./images/room3.jpg" alt="">
             </div>
             <div class="add-services-col-center">
-              <h6>Sharoitlar</h6>
-              <h3>Siz uchun qulay sharoitlar</h3>
+              <h6 data-aos="zoom-out-down">Sharoitlar</h6>
+              <h3 data-aos="zoom-out-down">Siz uchun qulay sharoitlar</h3>
               <ul>
-                <li><i class='bx bx-check-circle'></i>Yuqori tezlikdagi Wi-Fi</li>
-                <li><i class='bx bx-check-circle'></i>Bepul qahva, choy va sneklar</li>
-                <li><i class='bx bx-check-circle'></i>Chop etish va skanerlash xizmatlari</li>
-                <li><i class='bx bx-check-circle'></i>Sokin zonalar va brainstorming zonalari</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Yuqori tezlikdagi Wi-Fi</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Bepul qahva, choy va sneklar</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Chop etish va skanerlash xizmatlari</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Sokin zonalar va brainstorming zonalari</li>
               </ul>
             </div>
           </div>
-          <div class="add-services-col">
+          <div data-tilt data-tilt-max="30" data-tilt-speed="400" data-tilt-perspective="500" class="add-services-col">
             <div class="add-services-col-top">
-              <img src="./images/room4.jpg" alt="">
+              <img data-aos="zoom-out-down" src="./images/room4.jpg" alt="">
             </div>
             <div class="add-services-col-center">
-              <h6>A'zolik imtiyozlari</h6>
-              <h3>A'zolarga maxsus imtiyozlar</h3>
+              <h6 data-aos="zoom-out-down">A'zolik imtiyozlari</h6>
+              <h3 data-aos="zoom-out-down">A'zolarga maxsus imtiyozlar</h3>
               <ul>
-                <li><i class='bx bx-check-circle'></i>Haftalik tanishuv tadbirlari</li>
-                <li><i class='bx bx-check-circle'></i>Biznesni rivojlantirish bo'yicha seminarlar</li>
-                <li><i class='bx bx-check-circle'></i>A'zolarning onlayn jamiyatiga qo'shilish</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Haftalik tanishuv tadbirlari</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>Biznesni rivojlantirish bo'yicha seminarlar</li>
+                <li data-aos="zoom-out-down"><i class='bx bx-check-circle'></i>A'zolarning onlayn jamiyatiga qo'shilish</li>
               </ul>
             </div>
           </div>
@@ -150,46 +152,46 @@
       </div>
     </div>
 
+
     <!-- footer -->
 
-    <footer>
+    <footer data-tilt data-tilt-max="5" data-tilt-speed="400" data-tilt-perspective="500">
       <div class="container">
-        <div class="footer-column">
-          <div class="footer-col">
-            <div class="logo"><a href="./services.html">WorkHub</a></div>
-            <p>Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion, quvnoq,
-              toza, osoyishta, tezkor.</p>
-            <form>
-              <p>Jamoamizga qo'shiling</p>
-              <input id="email" autocomplete="email" required type="email" placeholder="Emailingizni yozing">
-              <button id="submitBtn">Qo'shilish</button>
-            </form>
+          <div class="footer-column">
+              <div class="footer-col">
+                  <div data-aos="zoom-out-down" class="logo"><a href="./faq.html">WorkHub</a></div>
+                  <p data-aos="zoom-out-down">Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion,
+                      quvnoq, toza, osoyishta, tezkor.</p>
+                  <form>
+                      <p data-aos="zoom-out-down">Jamoamizga qo'shiling</p>
+                      <input data-aos="zoom-out-down" id="email" autocomplete="email" required type="email" placeholder="Emailingizni yozing">
+                      <button data-aos="zoom-out-down" id="submitBtn">Qo'shilish</button>
+                  </form>
+              </div>
+              <div  class="footer-col">
+                  <h2 data-aos="zoom-out-down">Sahifalar</h2>
+                  <ul>
+                      <li data-aos="zoom-out-down"><a href="./services.html">Bosh Sahifa</a></li>
+                      <li data-aos="zoom-out-down"><a href="../index.html#sharoitlar">Sharoitlar</a></li>
+                      <li data-aos="zoom-out-down"><a href="../index.html#fikrlar">Fikrlar</a></li>
+                      <li data-aos="zoom-out-down"><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
+                      <li data-aos="zoom-out-down"><a href="../index.html#FAQ">FAQ</a></li>
+                      <li data-aos="zoom-out-down"><a href="../index.html#tolovlar">To'lovlar</a></li>
+                  </ul>
+              </div>
+              <div class="footer-col">
+                  <h2 data-aos="zoom-out-down">Tarmoqlar</h2>
+                  <ul>
+                      <li data-aos="zoom-out-down"><a target="_blank" href="https://www.facebook.com/">Facebook</a></li>
+                      <li data-aos="zoom-out-down"><a target="_blank" href="https://www.instagram.com/">Instagram</a></li>
+                      <li data-aos="zoom-out-down"><a target="_blank" href="https://www.github.com/">GitHub</a></li>
+                      <li data-aos="zoom-out-down"><a target="_blank" href="https://www.linkedin.com/">LinkedIn</a></li>
+                      <li data-aos="zoom-out-down"><a target="_blank" href="https://www.youtube.com/">YouTube</a></li>
+                  </ul>
+              </div>
           </div>
-          <div class="footer-col">
-            <h2>Sahifalar</h2>
-            <ul>
-              <li><a href="../index.html">Bosh Sahifa</a></li>
-              <li><a href="../index.html#sharoitlar">Sharoitlar</a></li>
-              <li><a href="../index.html#fikrlar">Fikrlar</a></li>
-              <li><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
-              <li><a href="../index.html#FAQ">FAQ</a></li>
-              <li><a href="../index.html#tolovlar">To'lovlar</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h2>Tarmoqlar</h2>
-            <ul>
-              <li><a target="_blank" href="https://www.facebook.com/">Facebook</a></li>
-              <li><a target="_blank" href="https://www.instagram.com/">Instagram</a></li>
-              <li><a target="_blank" href="https://www.github.com/">GitHub</a></li>
-              <li><a target="_blank" href="https://www.linkedin.com/">LinkedIn</a></li>
-              <li><a target="_blank" href="https://www.youtube.com/">YouTube</a></li>
-            </ul>
-          </div>
-        </div>
       </div>
-    </footer>
-
+  </footer>
     <!-- loader js-->
     <script>
       var load = document.getElementById("load");
@@ -198,8 +200,19 @@
           load.style.display = "none";
         }, 2000);
       });
+      // Body kengligini cheklash
+      document.body.style.overflowX = "hidden";
 
     </script>
+    <!-- aos js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
+
+    <!-- vanilla js -->
+    <script src="./vanilla.js"></script>
 </body>
 
 </html>
